<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#A4AC85"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseLevelActivity">
    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/oyunyazisi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/easy"
        android:layout_width="323dp"
        android:layout_height="60dp"
        android:background="@drawable/selecteasy"
        android:text="@string/easy"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@drawable/easyselectortext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />
    <Button
        android:id="@+id/medium"
        android:layout_width="323dp"
        android:layout_height="60dp"
        android:background="@drawable/selectedmediumlevel"
        android:text="@string/medium"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@drawable/selectedmediumtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
    <Button
        android:id="@+id/hard"
        android:layout_width="323dp"
        android:layout_height="60dp"
        android:background="@drawable/selectedhardlevel"
        android:text="@string/tin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@drawable/selectedhardtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />
</androidx.constraintlayout.widget.ConstraintLayout>